# E-Teach

./: LICENSE.md  README.md  pyproject.toml
api/v1/: __init__.py
api/v1/e_teach/: __init__.py  knowledge.py  lesson_note.py  lesson_plan.py
api/v1/tasks/: __init__.py  tasks.py
api/v1/users/: users.py
app/controllers/: __init__.py  auth.py  task.py
app/models/: task.py  user.py
app/repositories/: __init__.py  task.py  user.py
app/schemas/requests/: tasks.py  users.py
app/schemas/responses/: tasks.py  users.py
core/: config.py  server.py
core/cache/: redis_backend.py
core/controller/: base.py
core/database/: __init__.py  session.py  standalone_session.py  transactional.py
core/factory/: factory.py
core/fastapi/middlewares/: __init__.py  motormongo.py  response_logger.py
core/models/: __init__.py  base.py
core/repository/: base.py
