[tool.poetry]
name = "E-teach"
version = "0.1.0"
description = "AI Backend for E-Teach App"
authors = ["Francis-Alfred Michaelangelo <michaelangeloifeanyichukwu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
